# ProceduralCities

./: .clang-format  .gitignore  CMakeLists.txt  benchmark_results.csv  imgui.ini
include/: Mesh.h  Shader.h  Texture.h  Window.h  config.h
include/city/: Street.h
shaders/colorShader/: fragment.glsl  vertex.glsl
shaders/textureShader/: fragment.glsl  vertex.glsl
src/: Mesh.cpp  Window.cpp  glad.c  hello.cu  main.cpp
src/City/: BuildingData.h  BuildingGen.cu  City.cpp  City.h  CityZone.h  Street.cpp  Street.h
src/Core/: config.h  glad.c  helpers.cpp  helpers.h
src/Core/glad/: glad.h
src/Renderer/: Camera.cpp  Camera.h  CityVisualizer.cpp  CityVisualizer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/Utils/: DebugUtils.cpp  DebugUtils.h
src/city/: Street.cpp
